# BetterProfiles-fork

./: .gitignore  CMakeLists.txt  README.md  about.md  mod.json  support.md
.github/workflows/: build.yml  multi-platform.yml
include/: backend.hpp  iosincludes.hpp  state.hpp  structs.hpp  structsjson.hpp  utils.hpp
include/ui/: edit_background.hpp  edit_bio.hpp  edit_pronouns.hpp  editpage.hpp  extended_profile.hpp
resources/sprites/: README.txt
src/: main.cpp  state.cpp  utils.cpp
src/hooks/: profilepage.cpp
src/ui/: edit_background.cpp  edit_bio.cpp  edit_pronouns.cpp  editpage.cpp  extended_profile.cpp
